Started the template for song request

--- a/views/songrequest.hbs
+++ b/views/songrequest.hbs
@@ -3,7 +3,18 @@
 </div>
 
 <div class="jumbotron">
-    <div id="js-youtube-player"></div>
+  <div class="row">
+    <div class="col-md-4">
+      <div id="js-youtube-player"></div>
+    </div>
+    <div class="col-md-8">
+      <p><strong>Canción:</strong> Foo Fighters - The Pretender</p>
+      <p><strong>Agregada:</strong> <a href="">vallelblanco</a> (10/Mayo/2017)</p>
+
+      <button class="btn btn-warning">Saltar canción <span class="glyphicon glyphicon-step-forward"></span></button>
+      <button class="btn btn-danger">Vetar canción <span class="glyphicon glyphicon-ban-circle"></span></button>
+    </div>
+  </div>
 </div>
 
 <div class="panel panel-default">
