--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -54,5 +54,18 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <!--[IF IE]><!-->
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <!--<![endif]-->
+    <script src="http://cdn.tmijs.org/js/latest/1.x/tmi.min.js"></script>
+
+    <script src="https://apis.google.com/js/api.js"></script>
+
+    <script src="js/oauth.js"></script>
+    <script src="js/youtube.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/bot.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
