Updated song request template. Starting creation of model and controller

--- a/views/songrequest.hbs
+++ b/views/songrequest.hbs
@@ -2,14 +2,16 @@
     <h1>Song Request</h1>
 </div>
 
-<div class="jumbotron">
+<div class="well">
   <div class="row">
     <div class="col-md-4">
       <div id="js-youtube-player"></div>
     </div>
     <div class="col-md-8">
-      <p><strong>Canción:</strong> Foo Fighters - The Pretender</p>
-      <p><strong>Agregada:</strong> <a href="">vallelblanco</a> (10/Mayo/2017)</p>
+      <h4>Canción actual</h4>
+      <p><span class="glyphicon glyphicon-music"></span> Foo Fighters - The Pretender</p>
+      <p><span class="glyphicon glyphicon-user"></span> <a href="">vallelblanco</a></p>
+      <p><span class="glyphicon glyphicon-calendar"></span> 10/Mayo/2017</p>
 
       <button class="btn btn-warning">Saltar canción <span class="glyphicon glyphicon-step-forward"></span></button>
       <button class="btn btn-danger">Vetar canción <span class="glyphicon glyphicon-ban-circle"></span></button>
@@ -17,26 +19,54 @@
   </div>
 </div>
 
-<div class="panel panel-default">
-  <div class="panel-body">
-    Basic panel example
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-body">
-    Basic panel example
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-body">
-    Basic panel example
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-body">
-    Basic panel example
-  </div>
-</div>
+<h4>Lista de reproducción:</h4>
+<table class="table">
+  <tr>
+    <td><span class="glyphicon glyphicon-music"></span> Foo Fighters - The Pretender</td>
+    <td><span class="glyphicon glyphicon-user"></span> <a href="">vallelblanco</a></td>
+    <td><span class="glyphicon glyphicon-calendar"></span> 10/Mayo/2017</td>
+    <td class="col-md-2 text-right">
+      <a href="" class="btn btn-xs btn-danger glyphicon glyphicon-trash"></a>
+    </td>
+  </tr>
+  <tr>
+    <td><span class="glyphicon glyphicon-music"></span> Foo Fighters - The Pretender</td>
+    <td><span class="glyphicon glyphicon-user"></span> <a href="">vallelblanco</a></td>
+    <td><span class="glyphicon glyphicon-calendar"></span> 10/Mayo/2017</td>
+    <td class="col-md-2 text-right">
+      <a href="" class="btn btn-xs btn-danger glyphicon glyphicon-trash"></a>
+    </td>
+  </tr>
+  <tr>
+    <td><span class="glyphicon glyphicon-music"></span> Foo Fighters - The Pretender</td>
+    <td><span class="glyphicon glyphicon-user"></span> <a href="">vallelblanco</a></td>
+    <td><span class="glyphicon glyphicon-calendar"></span> 10/Mayo/2017</td>
+    <td class="col-md-2 text-right">
+      <a href="" class="btn btn-xs btn-danger glyphicon glyphicon-trash"></a>
+    </td>
+  </tr>
+  <tr>
+    <td><span class="glyphicon glyphicon-music"></span> Foo Fighters - The Pretender</td>
+    <td><span class="glyphicon glyphicon-user"></span> <a href="">vallelblanco</a></td>
+    <td><span class="glyphicon glyphicon-calendar"></span> 10/Mayo/2017</td>
+    <td class="col-md-2 text-right">
+      <a href="" class="btn btn-xs btn-danger glyphicon glyphicon-trash"></a>
+    </td>
+  </tr>
+  <tr>
+    <td><span class="glyphicon glyphicon-music"></span> Foo Fighters - The Pretender</td>
+    <td><span class="glyphicon glyphicon-user"></span> <a href="">vallelblanco</a></td>
+    <td><span class="glyphicon glyphicon-calendar"></span> 10/Mayo/2017</td>
+    <td class="col-md-2 text-right">
+      <a href="" class="btn btn-xs btn-danger glyphicon glyphicon-trash"></a>
+    </td>
+  </tr>
+  <tr>
+    <td><span class="glyphicon glyphicon-music"></span> Foo Fighters - The Pretender</td>
+    <td><span class="glyphicon glyphicon-user"></span> <a href="">vallelblanco</a></td>
+    <td><span class="glyphicon glyphicon-calendar"></span> 10/Mayo/2017</td>
+    <td class="col-md-2 text-right">
+      <a href="" class="btn btn-xs btn-danger glyphicon glyphicon-trash"></a>
+    </td>
+  </tr>
+</table>
