Moved chat bot logic to backend code. Starting with models and services [WIP]

--- a/views/songrequest.hbs
+++ b/views/songrequest.hbs
@@ -8,7 +8,7 @@
       <div id="js-youtube-player"></div>
     </div>
     <div class="col-md-8">
-      <h4>Canción actual</h4>
+      <h4>Canción actual:</h4>
       <p><span class="glyphicon glyphicon-music"></span> Foo Fighters - The Pretender</p>
       <p><span class="glyphicon glyphicon-user"></span> <a href="">vallelblanco</a></p>
       <p><span class="glyphicon glyphicon-calendar"></span> 10/Mayo/2017</p>
