--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -58,14 +58,14 @@
     <!--[IF IE]><!-->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <!--<![endif]-->
-    <script src="http://cdn.tmijs.org/js/latest/1.x/tmi.min.js"></script>
+    {{!--<script src="http://cdn.tmijs.org/js/latest/1.x/tmi.min.js"></script>--}}
 
     <script src="https://apis.google.com/js/api.js"></script>
 
-    <script src="js/oauth.js"></script>
+    {{!--<script src="js/oauth.js"></script>
     <script src="js/youtube.js"></script>
     <script src="js/data.js"></script>
     <script src="js/bot.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js"></script>--}}
   </body>
 </html>
