Show current song

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -61,9 +61,9 @@
     {{!--<script src="http://cdn.tmijs.org/js/latest/1.x/tmi.min.js"></script>--}}
 
     <script src="https://apis.google.com/js/api.js"></script>
+    <!--<script src="js/youtube.js"></script>-->
 
     {{!--<script src="js/oauth.js"></script>
-    <script src="js/youtube.js"></script>
     <script src="js/data.js"></script>
     <script src="js/bot.js"></script>
     <script src="js/app.js"></script>--}}
