--- a/views/songrequest.hbs
+++ b/views/songrequest.hbs
@@ -8,7 +8,7 @@
             <iframe id="js-youtube-player"
                     width="400" height="250"
                     src="https://www.youtube.com/embed/{{currentSong.videoId}}?enablejsapi=1"
-                    frameborder="0"
+                    frameborder="0" data-song-id="{{currentSong.id}}"
             ></iframe>
         </div>
         <div class="col-md-7">
