Song request update next song when ending playing the current song

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -62,5 +62,6 @@
     <!--<![endif]-->
 
     <script src="js/youtube-player.js"></script>
+    <script src="js/song-request.js"></script>
   </body>
 </html>
