Implemented socket.io. Created volume and currentsong command.

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -61,7 +61,13 @@
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <!--<![endif]-->
 
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket = io();
+    </script>
+
     <script src="js/youtube-player.js"></script>
     <script src="js/song-request.js"></script>
+    <script src="js/socket-api.js"></script>
   </body>
 </html>
