--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,21 +27,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="{{#if indexPage}}active{{/if}}"><a href="/">Home</a></li>
+            <li class="{{#if indexPage}}active{{/if}}"><a href="/">Inicio</a></li>
             <li class="{{#if songRequestPage}}active{{/if}}"><a href="/songrequest">Song Request</a></li>
-            {{!--<li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>--}}
+            <li class="{{#if rankingPage}}active{{/if}}"><a href="/puntos">Puntos</a></li>
           </ul>
         </div>
         <!--/.nav-collapse -->
