Import points from csv file (revlo format)

--- a/views/ranking.hbs
+++ b/views/ranking.hbs
@@ -2,6 +2,8 @@
     <h1>Puntos</h1>
 </div>
 
+<a href="/puntos/importar" class="btn btn-primary pull-right"><span class="glyphicon glyphicon-save"></span> Importar</a>
+
 {{#if rankingList }}
     <table class="table table-striped">
         <thead>
