--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,4 @@
-body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
-
-a {
-  color: #00B7FF; }
+.page-header {
+  margin-top: 0; }
 
 /*# sourceMappingURL=style.css.map */
