--- a/views/ranking.hbs
+++ b/views/ranking.hbs
@@ -3,7 +3,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-8">
+    <div class="panel panel-default col-md-8">
     {{#if rankingList }}
         <table class="table table-striped">
             <thead>
@@ -32,15 +32,22 @@
                 <strong>Apuestas</strong>
             </div>
             <div class="panel-body">
-                <form action="/comandos/guardar" class="form" method="post">
+                <form action="/comandos/gamble/guardar" class="form" method="post">
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" name="enabled" id="enableGamble" {{#if gambleEnabled }}checked="checked"{{/if}}>
                             Permitir a los usuarios apostar sus puntos con el comando <strong>!gamble</strong>
                         </label>
                     </div>
+                    <div class="form-group col-md-offset-1">
+                        <label for="cooldown">¿Qué tan seguido pueden apostar los usuarios?</label>
+                        <div class="input-group">
+                            <input type="number" class="form-control " name="cooldown" id="cooldown" value="{{#if gambleCooldown }}{{gambleCooldown}}{{else}}0{{/if}}" {{#unless gambleEnabled }}disabled{{/unless}}>
+                            <span class="input-group-addon">minutos</span>
+                        </div>
+                    </div>
                     <input type="hidden" name="command" value="gamble">
-                    <button class="btn btn-primary" type="submit">Guardar cambios</button>
+                    <button class="btn btn-primary btn-block" type="submit">Guardar cambios</button>
                 </form>
             </div>
         </div>
@@ -48,7 +55,7 @@
         <div class="panel panel-default">
             <div class="panel-heading"><strong>Importar puntos</strong></div>
             <div class="panel-body">
-                <a href="/puntos/importar" class="btn btn-primary"><span class="glyphicon glyphicon-save"></span> Importar</a>
+                <a href="/puntos/importar" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-save"></span> Importar</a>
             </div>
         </div>
     </div>
