Added twitch oauth login

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,13 @@
 .page-header {
   margin-top: 0; }
 
+.btn-twitch {
+  color: #fff;
+  background-color: #6441A5;
+  border-color: #2F1F4E; }
+  .btn-twitch:hover, .btn-twitch:focus, .btn-twitch:active, .btn-twitch.active {
+    color: #fff;
+    background-color: #472e75;
+    border-color: #2F1F4E; }
+
 /*# sourceMappingURL=style.css.map */
