--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -1,2 +1,12 @@
 .page-header
   margin-top: 0
+
+.btn-twitch
+  color: #fff
+  background-color: #6441A5
+  border-color: #2F1F4E
+
+  &:hover, &:focus, &:active, &.active
+    color: #fff
+    background-color: #472e75
+    border-color: #2F1F4E
