--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,5 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="text-center">
+    <a class="btn btn-lg btn-twitch" href="https://api.twitch.tv/kraken/oauth2/authorize?client_id={{clientId}}&redirect_uri={{redirectUrl}}&response_type=code&scope={{scope}}">
+        <i class="fa fa-1x fa-twitch"></i> Iniciar sesión con Twitch
+    </a>
+</div>
