--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel='stylesheet' href='/css/style.css' />
 
     <title>{{title}}</title>
@@ -27,9 +29,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="{{#if indexPage}}active{{/if}}"><a href="/">Inicio</a></li>
-            <li class="{{#if songRequestPage}}active{{/if}}"><a href="/songrequest">Song Request</a></li>
-            <li class="{{#if rankingPage}}active{{/if}}"><a href="/puntos">Puntos</a></li>
+            {{#unless loginPage }}
+                <li class="{{#if rankingPage}}active{{/if}}"><a href="/puntos">Puntos</a></li>
+                <li class="{{#if songRequestPage}}active{{/if}}"><a href="/songrequest">Song Request</a></li>
+            {{/unless}}
           </ul>
         </div>
         <!--/.nav-collapse -->
