--- a/views/songrequest.hbs
+++ b/views/songrequest.hbs
@@ -7,7 +7,7 @@
         <div class="col-md-5">
             <iframe id="js-youtube-player"
                     width="400" height="250"
-                    src="https://www.youtube.com/embed/{{currentSong.videoId}}?enablejsapi=1"
+                    src="https://www.youtube.com/embed/{{currentSong.songId}}?enablejsapi=1"
                     frameborder="0"
             ></iframe>
         </div>
