Fixed changing to next song. Added delete button functionality.

--- a/views/songrequest.hbs
+++ b/views/songrequest.hbs
@@ -17,7 +17,7 @@
             <p><span class="glyphicon glyphicon-user"></span> <span class="js-current-song-username"><a href="http://twitch.tv/{{currentSong.userName}}">{{currentSong.userName}}</a></span></p>
             <p><span class="glyphicon glyphicon-calendar"></span> <span class="js-current-song-date">{{currentSong.date}}</span></p>
             <button class="btn btn-warning js-song-request-skip">Saltar canción <span class="glyphicon glyphicon-step-forward"></span></button>
-            <button class="btn btn-danger js-song-request-veto" data-video-id="{{currentSong.songId}}">Vetar canción <span class="glyphicon glyphicon-ban-circle"></span></button>
+            <button class="btn btn-danger js-song-request-veto hidden" data-video-id="{{currentSong.songId}}">Vetar canción <span class="glyphicon glyphicon-ban-circle"></span></button>
         </div>
     </div>
 </div>
