Created list of commands and interface to create a command

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,6 +32,7 @@
             {{#unless loginPage }}
                 <li class="{{#if rankingPage}}active{{/if}}"><a href="/puntos">Puntos</a></li>
                 <li class="{{#if songRequestPage}}active{{/if}}"><a href="/songrequest">Song Request</a></li>
+                <li class="{{#if commandsPage}}active{{/if}}"><a href="/comandos">Comandos</a></li>
             {{/unless}}
           </ul>
         </div>
