--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,6 +35,11 @@
                 <li class="{{#if commandsPage}}active{{/if}}"><a href="/comandos">Comandos</a></li>
             {{/unless}}
           </ul>
+          {{#unless loginPage }}
+          <form class="navbar-form navbar-right" action="{{#if isBotConnected}}/leave-channel{{else}}/join-channel{{/if}}" method="post">
+            <button type="submit" class="btn btn-{{#if isBotConnected}}danger{{else}}primary{{/if}}">{{#if isBotConnected}}Salir del chat{{else}}Unirse al chat{{/if}}</button>
+          </form>
+          {{/unless}}
         </div>
         <!--/.nav-collapse -->
       </div>
