Limit access to selected users/channels with a column on db

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,10 @@
+<div class="alert alert-warning" role="alert">
+    <strong>Nos encontramos en beta cerrada.</strong>
+    Puedes iniciar sesión con Twitch, y si no eres un usuario con acceso a la beta tu registro
+    servirá para hacerte saber noticias sobre nuestro lanzamiento :) (no te preocupes, tu email estará seguro 
+    y no se usará con otros fines).
+</div>
+
 <div class="text-center">
     <a class="btn btn-lg btn-twitch" href="https://api.twitch.tv/kraken/oauth2/authorize?client_id={{clientId}}&redirect_uri={{redirectUrl}}&response_type=code&scope={{scope}}">
         <i class="fa fa-1x fa-twitch"></i> Iniciar sesión con Twitch
