--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,17 +25,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Twitch Chat Bot</a>
+          <a class="navbar-brand" href="#">{{appName}}</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            {{#unless loginPage }}
+            {{#unless notLogged }}
                 <li class="{{#if rankingPage}}active{{/if}}"><a href="/puntos">Puntos</a></li>
                 <li class="{{#if songRequestPage}}active{{/if}}"><a href="/songrequest">Song Request</a></li>
                 <li class="{{#if commandsPage}}active{{/if}}"><a href="/comandos">Comandos</a></li>
             {{/unless}}
           </ul>
-          {{#unless loginPage }}
+          {{#unless notLogged }}
           <form class="navbar-form navbar-right" action="{{#if isBotConnected}}/leave-channel{{else}}/join-channel{{/if}}" method="post">
             <button type="submit" class="btn btn-{{#if isBotConnected}}danger{{else}}primary{{/if}}">{{#if isBotConnected}}Salir del chat{{else}}Unirse al chat{{/if}}</button>
           </form>
