--- a/views/commands.hbs
+++ b/views/commands.hbs
@@ -2,10 +2,14 @@
     <h1>Comandos</h1>
 </div>
 
+{{#if msg}}
+<div class="alert alert-success" role="alert">{{{msg}}}</div>
+{{/if}}
+
 <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#command">Crear comando</button>
 
 <div class="panel">
-    <table class="table">
+    <table class="table cmd-list">
         <thead>
             <tr>
                 <th>Comando</th>
@@ -20,7 +24,14 @@
                     <td>!{{name}}</td>
                     <td>{{message}}</td>
                     <td>{{enabled}}</td>
-                    <td></td>
+                    <td>
+                        <a href="#editar" data-name="{{name}}" class="btn btn-default btn-sm btn-edit-cmd">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </a>
+                        <a href="/comandos/borrar/{{name}}" data-name="{{name}}" class="btn btn-danger btn-sm btn-delete-cmd">
+                            <span class="glyphicon glyphicon-remove"></span>
+                        </a>
+                    </td>
                 </tr>
             {{/each}}
         </tbody>
