--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <link rel="stylesheet" type="text/css" href="swal/sweetalert.css">
+
     <link rel='stylesheet' href='/css/style.css' />
 
     <title>{{title}}</title>
@@ -66,8 +68,10 @@
         var socket = io();
     </script>
 
+    <script src="swal/sweetalert.min.js"></script>
     <script src="js/youtube-player.js"></script>
     <script src="js/song-request.js"></script>
     <script src="js/socket-api.js"></script>
+    <script src="js/commands.js"></script>
   </body>
 </html>
