Moved db to its own folder. Fixed showing if a command is enabled when editing.

--- a/views/commands.hbs
+++ b/views/commands.hbs
@@ -68,7 +68,7 @@
                     <div class="col-sm-offset-2 col-sm-10">
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" checked="checked" id="commandEnabled" name="commandEnabled"> Comando habilitado
+                                <input type="checkbox" checked="checked" id="commandEnabled" name="commandEnabled"> Habilitado
                             </label>
                         </div>
                     </div>
